# Second_Ped_Project

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose-local.yml  hashed.py  main.py  middleware.py  pyproject.toml  requirements.txt  security.py  settings.py
api/: handlers.py  login_handler.py  models.py
db/: dals.py  models.py  session.py
migrations/: env.py
services/: email_service.py
tests/: conftest.py  test_handlers.py  test_middleware.py  test_models.py  test_security.py  test_simple.py
worker/: celery_app.py  check_connection.py  tasks.py
